--- a/TP2/styles/header.css
+++ b/TP2/styles/header.css
@@ -29,6 +29,12 @@ header {
     cursor: pointer;
 }
 
+.navbar-logo img {
+    transform: scale(1.45);
+    margin-left: 5px;
+    margin-bottom: 1px;
+}
+
 .profile-button {
     cursor: pointer;
 }
@@ -184,7 +190,9 @@ header {
     background-color: transparent;
     padding: 0 24px;
     display: inline-flex;
-    margin-top: 5px;
+    margin-top: 20px;
+    margin-left: 18px;
+    margin-bottom: 20px;
 }
 
 #breadcrumbs li {
