--- a/TP2/styles/super-carousel.css
+++ b/TP2/styles/super-carousel.css
@@ -5,7 +5,7 @@
     align-items: center;
     overflow: hidden;
     background: var(--secondaryColorDark75);
-    margin-top: 15px;
+    margin-top: 40px;
     margin-bottom: 15px;
 }
 
